--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,13 +26,12 @@ spring:
       hibernate:
         format_sql: true
 
-  auth:
-    google:
-      client-id: ${GOOGLE_CLIENT}
-      client-secret: ${GOOGLE_SECRET}
-      scope:
-        - email
-        - profile
+auth:
+  google:
+    client-id: ${GOOGLE_CLIENT}
+    client-secret: ${GOOGLE_SECRET}
+    base-url: ${GOOGLE_BASE_URL}
+    redirect-url: ${GOOGLE_REDIRECT}
 
 jwt:
   refresh-time: 2592000000 # 30일
@@ -40,3 +39,5 @@ jwt:
   prefix: Bearer
   header: Authorization
   secret-key: ${JWT_SECRET}
+
+#debug: true
