--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,10 +18,10 @@ spring:
 
   jpa:
     database: mysql
-    #    show-sql: true
+    show-sql: true
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
