--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mysql:
-    container_name: ssom
+    container_name: ssom.local.db
     image: mysql/mysql-server:5.7
     environment:
       MYSQL_ROOT_HOST: "%"
@@ -15,3 +15,11 @@ services:
       - "mysqld"
       - "--character-set-server=utf8mb4"
       - "--collation-server=utf8mb4_unicode_ci"
+
+  redis:
+    image: redis:7.0-alpine
+    container_name: ssom.local.redis
+    hostname: ssom
+    command: /bin/sh -c "redis-server --requirepass ssom"
+    ports:
+      - "6379:6379"
