REFACTOR :: goal response 형식 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     show-sql: true
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -38,8 +38,8 @@ auth:
     redirect-url: ${GOOGLE_REDIRECT}
 
 jwt:
+  access-time: 2592000000 # 30일
   refresh-time: 2592000000 # 30일
-  access-time: 3600000 # 1시간
   prefix: Bearer
   header: Authorization
   secret-key: ${JWT_SECRET}
